# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.80 2010/03/27 17:29:24 yngwin Exp $

*rb_libtorrent-0.14.9-r1 (27 Mar 2010)

  27 Mar 2010; Ben de Groot <yngwin@gentoo.org> rb_libtorrent-0.14.6.ebuild,
  -rb_libtorrent-0.14.8-r2.ebuild, rb_libtorrent-0.14.9.ebuild,
  +rb_libtorrent-0.14.9-r1.ebuild,
  +files/rb_libtorrent-0.14.9-as-needed-fix.patch:
  Revbump to fix bugs with as-needed (#276873) and mixed libtool (#298069).
  Add blocker to mldonkey when examples useflag is enabled (#292998). Remove
  older ~arch ebuild.

*rb_libtorrent-0.14.9 (27 Feb 2010)

  27 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.14.9.ebuild:
  Version bump

*rb_libtorrent-0.14.8-r2 (15 Jan 2010)

  15 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  -rb_libtorrent-0.14.8-r1.ebuild, +rb_libtorrent-0.14.8-r2.ebuild,
  +files/rb_libtorrent-0.14.8-boost-detect.patch:
  Add new boost detection patch to really fix bug 295474

  14 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  rb_libtorrent-0.14.8-r1.ebuild,
  +files/rb_libtorrent-0.14.8-as-needed-fix.patch:
  Add a patch to fix as-needed issues (bug 276873).

*rb_libtorrent-0.14.8-r1 (14 Jan 2010)

  14 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  -rb_libtorrent-0.14.7.ebuild, -rb_libtorrent-0.14.8.ebuild,
  +rb_libtorrent-0.14.8-r1.ebuild:
  Fix boost detection, thanks to Sebastian Mingramm in bug 295474. Remove
  previous version. 0.14.8-r1 is next stable candidate.

*rb_libtorrent-0.14.8 (11 Jan 2010)

  11 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.14.8.ebuild:
  Version bump

  09 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  rb_libtorrent-0.14.6.ebuild, rb_libtorrent-0.14.7.ebuild:
  Add ~arm

  09 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  rb_libtorrent-0.14.6.ebuild, rb_libtorrent-0.14.7.ebuild:
  Fix python dependency

  19 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>